# GLYPH

./: .gitignore  BUGHUNT.md  GLYPH.md  PROGRESS_CHECKLIST.md  README.md  SHOWCASE.md
backend/: Cargo.toml  Dockerfile  render.yaml
backend/migrations/: 001_initial.sql
backend/src/: errors.rs  main.rs
backend/src/api/: analyze.rs  mod.rs  repo.rs
backend/src/db/: models.rs  queries.rs
backend/src/ingestion/: commits.rs  issues.rs  mod.rs  pull_requests.rs
backend/src/intelligence/: client.rs  prompts.rs
backend/src/processing/: linker.rs
frontend/: .env.example  astro.config.mjs  package-lock.json  package.json  tailwind.config.cjs  vercel.json
frontend/src/components/: ContributorCard.astro  DebateExplorer.astro  DecisionGraph.astro  RepoInput.astro  Timeline.astro
frontend/src/pages/: index.astro
frontend/src/pages/repo/: [id].astro
frontend/src/pages/repo/[id]/: contributors.astro  debates.astro  decisions.astro  rejections.astro  summary.astro
frontend/src/styles/: global.css
